@@ -138,7 +138,7 @@ AppEngine service.</li>
 <ul>
 <li>Version 0.1.1 - 2010-01-01<br />
  - Fixed bugs in clipboard import, category addition, first item deletion &amp;
- item-list sorting.
+ item-list sorting.<br />
  - Removed upgrade support for original db format in versions 0.0.1 & 0.0.2.
 </li>
 
