@@ -45,3 +45,7 @@
 #import-data-div {
     max-height: 4em;
 }
+
+.palm-info-text ul {
+    padding-left: 1.2em;
+}
